Inserting the meta tags

--- a/vol3-2-article2.html
+++ b/vol3-2-article2.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Management and Use of Indigenous Knowledge in Selected Public Institutions in the Nairobi City County, Kenya" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol3-2-article2.html" />
+	<meta name="citation_author" content="Wamugi Samuel Maina" />
+    <meta name="citation_author" content="Henry Nyabuto Kemoni" />
+    <meta name="citation_author" content="Naomi Mwai" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%204.1.1.pdf" />
+	<meta name="citation_volume" content="3" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="21" />
+	<meta name="citation_lastpage" content="29" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,21 +74,21 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Wamugi Samuel Maina
                             <br>
-                            The Technical University of Kenya  
+                            The Technical University of Kenya
                             <br>
                             wamugisamuel5@gmail.com
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Prof. Henry Nyabuto Kemoni
                             <br>
-                            The Technical University of Kenya  
+                            The Technical University of Kenya
                             <br>
                             kemoni@tukenya.ac.ke / hkemoi@yahoo.com
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
-                            Naomi Mwai 
+                            Naomi Mwai
                             <br>
-                            The Technical University of Kenya   
+                            The Technical University of Kenya
                             <br>
                             mwainaomi@yahoo.com
                         </p>
@@ -85,23 +97,23 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            -The aim of the study was to investigate how indigenous knowledge is managed and used in selected public institutions within Nairobi City County, Kenya. The specific objectives were to establish how indigenous knowledge is acquired from local communities; explore the forms of indigenous knowledge managed and used; examine the indigenous knowledge management and use processes; investigate the challenges and opportunities in the management and use of indigenous knowledge; and recommend how to improve the management and use of indigenous knowledge. 
+                            -The aim of the study was to investigate how indigenous knowledge is managed and used in selected public institutions within Nairobi City County, Kenya. The specific objectives were to establish how indigenous knowledge is acquired from local communities; explore the forms of indigenous knowledge managed and used; examine the indigenous knowledge management and use processes; investigate the challenges and opportunities in the management and use of indigenous knowledge; and recommend how to improve the management and use of indigenous knowledge.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                            -The researcher adopted a qualitative research approach using a multiple case study design. Data was collected from 16 officers drawn from the National Museum of Kenya, Kenya National Library Service, Kenya National Archives and Documentation Service, and Kenya Medical Research Institute which deal with the management and use of indigenous knowledge in Nairobi City County.  
+                            -The researcher adopted a qualitative research approach using a multiple case study design. Data was collected from 16 officers drawn from the National Museum of Kenya, Kenya National Library Service, Kenya National Archives and Documentation Service, and Kenya Medical Research Institute which deal with the management and use of indigenous knowledge in Nairobi City County.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
-                            -The institutions lacked policies to guide the acquisition of indigenous knowledge from local communities. There were various forms of indigenous knowledge managed and used in the public institutions. However, there were no guidelines for their management and use. The study concluded that although indigenous knowledge plays a significant role, it was neither properly managed nor used. Therefore, there is need to properly harness and manage its use. 
+                            -The institutions lacked policies to guide the acquisition of indigenous knowledge from local communities. There were various forms of indigenous knowledge managed and used in the public institutions. However, there were no guidelines for their management and use. The study concluded that although indigenous knowledge plays a significant role, it was neither properly managed nor used. Therefore, there is need to properly harness and manage its use.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Implications</em>
-                            -The study recommends the formulation of a proper legal framework to guide the management and use of indigenous knowledge. There is also need for adequate allocation of resources, publicity and setting up of more indigenous knowledge repositories. 
+                            -The study recommends the formulation of a proper legal framework to guide the management and use of indigenous knowledge. There is also need for adequate allocation of resources, publicity and setting up of more indigenous knowledge repositories.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
-                            -This paper is based on a Master of Science in Information and Knowledge Management dissertation written at the Technical University of Kenya in 2018. 
+                            -This paper is based on a Master of Science in Information and Knowledge Management dissertation written at the Technical University of Kenya in 2018.
                         </p>
                         <p>
                             <strong>Keywords</strong>
@@ -110,7 +122,7 @@
                             Indigenous knowledge, knowledge repositories, Nairobi City County, Kenya
                         </p>
                         <div>
-                            <a href="assets/img/Man 3.2.2.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 3.2.2.pdf" target="blank">Management and Use of Indigenous Knowledge in Selected Public Institutions in the Nairobi City County, Kenya</a>
                         </div>
                     </article>
                 </div>
