--- a/vol4-2-article3.html
+++ b/vol4-2-article3.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Collection Development Models in Academic Libraries in South-South, Nigeria" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol4-2-article3.html" />
+	<meta name="citation_author" content="Joseph Chukwusa" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%204.2.3.pdf" />
+	<meta name="citation_volume" content="4" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="22" />
+	<meta name="citation_lastpage" content="32" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -112,7 +122,7 @@
                             Nigeria
                         </p>
                         <div>
-                            <a href="assets/img/Man 4.2.3.pdf">Full-Text Document</a>
+                            <a href="assets/img/Man 4.2.3.pdf" target="_blank">Collection Development Models in Academic Libraries in South-South, Nigeria</a>
                         </div>
                     </article>
                 </div>
