--- a/vol5-1-article1.html
+++ b/vol5-1-article1.html
@@ -6,6 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="description" content="" />
 	<meta name="author" content="" />
+	<meta name="citation_title" content="Entrepreneurship Development in University Libraries in the South-South Zone of Nigeria" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol5-1-article1.html" />
+	<meta name="citation_author" content="Ogochukwu T. Emiri" />
+	<meta name="citation_author" content="Daniel Emojorho" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%205.1.1.pdf" />
+	<meta name="citation_volume" content="5" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="1" />
+	<meta name="citation_lastpage" content="22" />
 	<title>RJIKM</title>
 	<!-- Favicon-->
 	<link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,9 +73,9 @@
                         <p style="text-align: center;"class="text-white-75 mb-4">
                             Ogochukwu T. Emiri, PhD, CLN
                             <br>
-                            University Library  
+                            University Library
                             <br>
-                            Delta State University 
+                            Delta State University
                             <br>
                             Abraka, Nigeria
                             <br>
@@ -73,7 +84,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Daniel Emojorho, Ph.D, CLN
                             <br>
-                            University Library 
+                            University Library
                             <br>
                             Delta State University
                             <br>
@@ -90,13 +101,13 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                            -The study adopted the survey research design. Five research questions were postulated and one hypothesis formulated to find out the relationship between the professional characteristics of library and information science (LIS) practitioners and their perception towards entrepreneurship development. The population of the study was 150 LIS professionals drawn from all the government owned universities in the South-South Zone of Nigeria. Data was collected using a questionnaire and analysed using descriptive and inferential statistics. 
+                            -The study adopted the survey research design. Five research questions were postulated and one hypothesis formulated to find out the relationship between the professional characteristics of library and information science (LIS) practitioners and their perception towards entrepreneurship development. The population of the study was 150 LIS professionals drawn from all the government owned universities in the South-South Zone of Nigeria. Data was collected using a questionnaire and analysed using descriptive and inferential statistics.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
                             -The findings show that LIS practitioners in the South-South Zone of Nigeria have a low perception towards entrepreneurship development even though they have the right skills needed for entrepreneurship. The benefits derived from entrepreneurship include control and flexibility of own time, among others. The study therefore concluded that no significant relationship exists between LIS practitioners’ professional characteristics and their perception towards entrepreneurship development.
                         </p>
-                        <p class="text-white-75 mb-4"> 
+                        <p class="text-white-75 mb-4">
                             <em>Implications</em>
                             -Based on the findings, the researchers recommend that LIS schools and professional associations should organise sensitisation or orientation programmes on entrepreneurship development in order to re-write the perception of library staff towards entrepreneurship.
                         </p>
@@ -111,7 +122,7 @@
                             Entrepreneurship development, LIS practitioners, government university libraries, South-South Zone, Nigeria
                         </p>
                         <div>
-                            <a href="assets/img/Man 5.1.1.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 5.1.1.pdf" target="blank">Entrepreneurship Development in University Libraries in the South-South Zone of Nigeria</a>
                         </div>
 					</article>
 				</div>
