--- a/vol5-1-article2.html
+++ b/vol5-1-article2.html
@@ -5,6 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="description" content="" />
 	<meta name="author" content="" />
+	<meta name="citation_title" content="Provision of Digital Reference Services in Selected Nigerian State University Libraries" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol5-1-article2.html" />
+	<meta name="citation_author" content="Janet Onomeh Ubogu" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%205.1.2.pdf" />
+	<meta name="citation_volume" content="5" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="22" />
+	<meta name="citation_lastpage" content="33" />
 	<title>RJIKM</title>
 	<!-- Favicon-->
 	<link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -61,7 +71,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Janet Onomeh Ubogu, PhD
                             <br>
-                            Delta State University Library  
+                            Delta State University Library
                             <br>
                             Abraka, Nigeria
                             <br>
@@ -76,7 +86,7 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                            -A survey research method was adopted for the study. The population of the study comprised of 45 professional librarians from three university libraries. These are Delta State University Library, Abraka; Niger Delta University Library, Amasoma; and River State University of Technology library, Port Harcourt. The population of librarians in the three institutions was small. So, the whole population formed the sample size and was used for the study. A questionnaire was used to collect data for the study. Data were analysed using descriptive statistics. 
+                            -A survey research method was adopted for the study. The population of the study comprised of 45 professional librarians from three university libraries. These are Delta State University Library, Abraka; Niger Delta University Library, Amasoma; and River State University of Technology library, Port Harcourt. The population of librarians in the three institutions was small. So, the whole population formed the sample size and was used for the study. A questionnaire was used to collect data for the study. Data were analysed using descriptive statistics.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
@@ -84,7 +94,7 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Implications</em>
-                            -The findings will serve as a reference point for other university libraries considering offering digital reference service. 
+                            -The findings will serve as a reference point for other university libraries considering offering digital reference service.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
@@ -97,7 +107,7 @@
                             Digital reference services, reference services, university library services, library patrons, information access
                         </p>
                         <div>
-                            <a href="assets/img/Man 5.1.2.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 5.1.2.pdf" target="blank">Provision of Digital Reference Services in Selected Nigerian State University Libraries</a>
                         </div>
 					</article>
 				</div>
