--- a/vol4-1-article1.html
+++ b/vol4-1-article1.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Knowledge Management among Savings and Credit Cooperatives (SACCOS) in Nairobi City County, Kenya" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol4-1-article1.html" />
+	<meta name="citation_author" content="Jackline Wasinda" />
+    <meta name="citation_author" content="Joseph Kiplang’at" />
+    <meta name="citation_author" content="Philemon Chebon" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%204.1.1.pdf" />
+	<meta name="citation_volume" content="4" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="1" />
+	<meta name="citation_lastpage" content="10" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -142,7 +154,7 @@
                             Kenya
                         </p>
                         <div>
-                            <a href="assets/img/Man 4.1.1.pdf target=" blank">Full-Text Document</a>
+                            <a href="assets/img/Man 4.1.1.pdf"  target="blank">Knowledge Management among Savings and Credit Cooperatives (SACCOS) in Nairobi City County, Kenya</a>
                         </div>
                     </article>
                 </div>
