--- a/vol4-1-article2.html
+++ b/vol4-1-article2.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Students’ Perceived Areas of Difficulty during Library Practicum in Nigerian University Libraries" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol4-1-article2.html" />
+	<meta name="citation_author" content="Joseph Chukwusa" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%204.1.2.pdf" />
+	<meta name="citation_volume" content="4" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="11" />
+	<meta name="citation_lastpage" content="22" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -120,7 +130,7 @@
                             SIWES
                         </p>
                         <div>
-                            <a href="assets/img/Man 4.1.2.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 4.1.2.pdf" target="blank">Students’ Perceived Areas of Difficulty during Library Practicum in Nigerian University Libraries</a>
                         </div>
                     </article>
                 </div>
