--- a/vol4-2-article1.html
+++ b/vol4-2-article1.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Mobilisation and Use of Alternative Funds by University Libraries in Nigeria" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol4-2-article1.html" />
+	<meta name="citation_author" content="Janet Onomeh Ubogu" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%204.2.1.pdf" />
+	<meta name="citation_volume" content="4" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="1" />
+	<meta name="citation_lastpage" content="11" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -114,7 +124,7 @@
                             sources of funding
                         </p>
                         <div>
-                            <a href="assets/img/Man 4.2.1.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 4.2.1.pdf" target="blank">Mobilisation and Use of Alternative Funds by University Libraries in Nigeria</a>
                         </div>
                     </article>
                 </div>
