--- a/vol4-2-article2.html
+++ b/vol4-2-article2.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Application of ICTs in Transforming Agricultural Extension" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol4-2-article2.html" />
+	<meta name="citation_author" content="Goudian Kilemba Gwademba" />
+    <meta name="citation_author" content="Daniel Wambiri Muthee" />
+    <meta name="citation_author" content="Johnson Mulongo Masinde" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%204.2.2.pdf" />
+	<meta name="citation_volume" content="4" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="12" />
+	<meta name="citation_lastpage" content="21" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -122,7 +134,7 @@
                             patrons, information access
                         </p>
                         <div>
-                            <a href="assets/img/Man 4.2.2.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 4.2.2.pdf" target="blank">Application of ICTs in Transforming Agricultural Extension</a>
                         </div>
                     </article>
                 </div>
